<resources>
    <string name="app_name">Popular Movies P1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_network_available">No network available</string>
    <string name="menu_main_most_popular">Most popular</string>
    <string name="menu_main_top_rated">Top rated</string>
    <string name="menu_main_settings">Settings</string>
    <string name="list_preference_sorting_mode">Select display mode </string>
    <string name="list_preference_default_value">mostPopular</string>

    <!-- ListPreference Title -->
    <string name="list_preference_sort_title">Prefered display</string>
    <!-- SharedPreferences Keys -->
    <string name="sp_key_preference_sort">sort</string>
    <string name="str_title_popular_movies">Popular Movies</string>
    <string name="str_title_top_rated">Top rated movies</string>
    <string name="str_sort_most_popular">mostPopular</string>
    <string name="str_sort_top_rated">topRated</string>

    <string name="title_movie_details">Movie Details</string>

    <!-- Strings for text views that use as labels -->
    <string name="tv_rating_label_text">Rating: </string>

    <!-- Strings preferences display mode names labels-->
    <string name="pref_display_mode_most_popular_lablel_">Most Popular</string>
    <string name="pref_display_mode_top_rated_label">Top rated</string>

    <!-- Strings preferences display mode values -->
    <string name="pref_display_mode_most_popular_value">Most Popular</string>
    <string name="pref_display_mode_top_rated_value">Most Popular</string>



    <string name="lp_display_mode_default_value">mostPopular</string>
    <!-- Strings that are used for development purposes-->
    <string name="tv_title_develop_text">Guardians of the Galaxy Vol.2</string>
    <string name="tv_date_develop_text">2017-04-24</string>
    <string name="tv_overview_develop_text">A live-action adaptation of Disney\'s version of the classic \'Beauty and the Beast\' tale of a cursed prince and a beautiful young woman who helps him break the spell.</string>
    <string name="tv_rating_develop_text">7.6</string>

</resources>
