<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context="com.jularic.dominik.popularmoviesp1.DetailActivityFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id ="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/tv_title_height"
            tools:text="@string/tv_title_develop_text"
            android:paddingLeft = "@dimen/tv_title_padding_left"
            android:background = "@color/colorPrimary"
            android:textSize= "@dimen/tv_title_text_size"
            android:gravity = "center_vertical"
            android:textColor="@color/colorPrimaryText"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight = "true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <ImageView
            android:id = "@+id/iv_poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:src="@drawable/guardians_of_galaxy_development"
            android:layout_margin="@dimen/iv_poster_margin"
            android:layout_below = "@+id/tv_title"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:id ="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/tv_date_develop_text"
            android:paddingLeft = "@dimen/tv_date_padding_left"
            android:paddingRight = "@dimen/tv_date_padding_right"
            android:paddingTop = "@dimen/tv_date_padding_top"
            android:paddingBottom = "@dimen/tc_date_padding_bottom"
            android:textColor="@color/colorSecondaryText"
            android:layout_below = "@+id/tv_title"
            android:layout_toRightOf="@+id/iv_poster"
            android:textSize= "@dimen/tv_date_text_size"/>

        <TextView
            android:id ="@+id/tv_rating_text"
            android:text="@string/tv_rating_label_text"
            android:layout_below = "@+id/tv_date"
            android:layout_toRightOf="@+id/iv_poster"
            style="@style/tv_movie_details"

            />

        <TextView
            android:id ="@+id/tv_rating"
            tools:text="@string/tv_rating_develop_text"
            android:layout_below = "@+id/tv_date"
            android:layout_toRightOf="@+id/tv_rating_text"
            style="@style/tv_movie_details" />

        <TextView
            android:id ="@+id/tv_overview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/tv_overview_develop_text"
            android:paddingLeft = "@dimen/tv_overview_padding_left"
            android:paddingRight = "@dimen/tv_overview_padding_right"
            android:paddingTop = "@dimen/tv_overview_padding_top"
            android:paddingBottom = "@dimen/tv_overview_padding_bottom"
            android:textColor="@color/colorSecondaryText"
            android:layout_below = "@+id/iv_poster"/>

    </RelativeLayout>
</ScrollView>
